<resources>
    <string name="app_name">SuitmediaTest</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="user">John Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="third_screen">Third Screen</string>
    <string name="retry">Coba Lagi</string>
    <string name="username">Username</string>
    <string name="email">email@email.com</string>
    <string name="no_data_user">No Data User</string>
</resources>