<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_photo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            style="@style/CustomTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/palindrome"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/palindrome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_palindrome"
            style="@style/CustomTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_check"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/check" />

    <Button
        android:id="@+id/btn_next"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next" />

</LinearLayout>
